# industrial-telemetry-ml-system

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  unified_manifest.json
.github/: settings.yml
case-study/: 01_Executive_Summary.md  02_Core_Insight.md  03_Technical_Architecture.md  04_Signal_Modeling.md  05_Why_This_Was_Hard.md  06_Ground_Truth_and_Labeling.md  07_Model_Evolution.md  08_Failure_Cases.md  09_Signal_Drift.md  10_Operational_Integration.md  11_Nationwide_Scale.md  12_Business_Outcome.md  13_Strategic_Significance.md  14_Appendix_A.md  README.md  The Compactor Became The Sensor.md  Undermind_Edit_Appendix_A.md  Undermind_Edit_Appendix_B.md  Undermind_Edit_Appendix_C.md
case-study/assets/: README.md
case-study/graphics/: empty_vs_full_state_overlay.af~lock~
clean_waveform_benchmark/: README.md  clean_waveform_dataset.json  clean_waveform_dataset.jsonl  inference_api.py  inference_demo.py  reference_image_classification.md
models/: README.md  baseline_knn_site_class.json  export_model.py
notebooks/: README.md  error_analysis.ipynb  feature_extraction_walkthrough.ipynb  setup_environment.ipynb
raw_payload_runs/: README.md  all_runs.jsonl  generate_mock_compaction_data.py  manifest.json  schema.json  validation_summary.csv
raw_payload_runs/scenarios/: base_single_heavy_near_full.jsonl  base_single_light.jsonl  base_single_medium.jsonl  baseline_drift.jsonl  double_run_ambiguous_boundary.jsonl  (+9 more)
tests/: test_repo_smoke.py
todo/: 01_executive_summary.md
(+7 files in other folders)
